# ALSE-

./: ADN  CMakeLists.txt  Codigos Amstrong y Leetcode(Alvaro Almanza)  Codigos Amstrong y Leetcode(Alvaro Almanza).cpp  Programa Calcular el MCD (Alvaro Almanza).py  Programa Suma de Dos (Alvaro Almanza)  README.md  SPACE  Sumar los elementos de un arreglo(Alvaro Almanza).py
Corte 3 entrega/: 1396 Design Underground System  3709 Design an ATM Machine  3815 Design Auction System - LeetCode  CMakeLists.txt  Clock in C++ on Exercism  Meetup in C++ on Exercism
Tarea/: Interes compuesto(Alvaro Almanza).py
Tarea3/: ejercicio1.py  robot simulator
corte2_Alvaro Almanza/: Chess  Twitter  spreadsheet
docs/: README.md
include/: Actuador.h
src/: Actuador.cpp  main.cpp
